# hexyg

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.ru.md
crates/hexyg-cli/: Cargo.toml
crates/hexyg-cli/src/: main.rs
crates/hexyg-core/: Cargo.toml
crates/hexyg-core/src/: config.rs  convert.rs  error.rs  lib.rs
crates/hexyg-grammar-check/: Cargo.toml
crates/hexyg-grammar-check/src/: lib.rs
crates/hexyg-lsp/: Cargo.toml
crates/hexyg-lsp/src/: main.rs
docs/: USAGE.md
grammar/: hexyg.g4
specs/: 00.01_folder_map  00.02_basic_idea.md  00.03_changelog.md  00.04_hex_document.md  00_master_plan.md  01_grammar_spec.md  02_options.md  03_architecture.md  04_rules_codex.md
specs/03_architecture.d/: 01_hex_document.md
specs/prompts/: role_rust_dev.md  service.md  task_generate_tests.md
tests/corpus/valid/: 01_reference.hex
