[package]
name = "hexyg-grammar-check"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
# This crate contains only tests, no library code
path = "src/lib.rs"

[dependencies]
# No runtime dependencies

[dev-dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
walkdir = "2"
tempfile = "3"
